WP-5552: fix clubs landing list spacing and dividers.

--- a/sass/conditionals/club-landing-list.sass
+++ b/sass/conditionals/club-landing-list.sass
@@ -7,7 +7,7 @@
 @import partials/base/00-variables/all
 @import partials/base/03-extend/gsb-revamp
 
-// Club node teaserstyling
+// Club node teaser styling
 .node-club.view-mode-teaser
   padding: 0
 
@@ -33,8 +33,7 @@
       +icon-after("email-stroke", true)
       &:after
         font-size: 12px
-        line-height: 0
-        margin-left: 0.3em
+        margin-left: 5px
 
 // Clubs - Non-customizable listings
 .view-display-id-club_list,
@@ -43,7 +42,8 @@
   margin-bottom: 30px
 
   .views-row
-    border-bottom: 1px solid $text-black
+    border-bottom: 1px $listing-divider solid
+    padding: $standard-padding 0
     &:last-of-type
       border-bottom: 0
     &:first-of-type
